2003-05-21  Christophe Fergeau  <teuf@users.sourceforge.net>

	* configure.in
	* test/Makefile.am: hopefully this should build now (warning, 
	I removed all the translations from configure.in). The only remaining
	issue is that GNOME_VFS_Daemon.h must be generated manually 
	(make GNOME_VFS_Daemon.h in daemon/)

2003-05-21  Christophe Fergeau  <teuf@users.sourceforge.net>

	* Makefile.am
	* configure.in: removed the 'programs' subdir from the build 
	  since it's not needed in this branch

2003-05-21  Christophe Fergeau  <teuf@users.sourceforge.net>

	* Makefile.am
	* daemon/Makefile.am
	* libgnomevfs/Makefile.am
	* modules/ftp-method.c
	* modules/ssh-method.c: attempt at getting things to build 
	  without too many hacks
	* mime/*: added some work in progress on the mime stuff
	
Synced the daemon branch with gnome-vfs head

2003-05-20  Christophe Fergeau  <teuf@users.sourceforge.net>

	* modules/ftp-method.c
	* modules/http-method.c
	* modules/ssh-method.c: fixed potential crash with uris containing
	  %2F, fixed a few small leaks

==== gnome-vfs 2.3.2 ====

2003-05-19  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 
	* configure.in:
	Bump to 2.3.2.

2003-05-17  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: add the programs subdir so the programs are built by
	default

2003-05-16 Radu Greab  <radu@netsoft.ro>
           Christophe Fergeau  <teuf@users.sourceforge.net>

	* libgnomevfs/gnome-vfs-utils.c(gnome_vfs_get_volume_free_space): 
	fixed a leak when the function was called with an non-file:// uri
	* modules/file-method.c(do_is_local): ncpfs file systems aren't local
	(fixes #97789) 

2003-05-16  Bastien Nocera  <hadess@hadess.net>

	* programs/gnomevfs-ls.c: (show_data), (main): remove use of SHOW_ICON

2003-05-16  Bastien Nocera  <hadess@hadess.net>

	reviewed by: Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	* programs/.cvsignore:
	* programs/Makefile.am:
	* programs/gnomevfs-cat.c:
	* programs/gnomevfs-copy.c: