@@ -748,7 +748,7 @@ gnome_vfs_mime_info_reload (void)
 	user_mime_dir.force_reload = FALSE;
 
 	/* 3. Tell anyone who cares */
-	_gnome_vfs_mime_monitor_emit_data_changed (gnome_vfs_mime_monitor_get ());
+//	_gnome_vfs_mime_monitor_emit_data_changed (gnome_vfs_mime_monitor_get ());
 }
 
 void
